<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background_colorful"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="24"
    tools:context="com.example.sihengli.charadesgame.MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_weight="1.5"
        android:paddingTop="20dp"
        android:text="@string/welcome_to_charades"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693">

        <Button
            android:id="@+id/standardGameBtn"
            style="@android:style/Widget.DeviceDefault.Button.Toggle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:alpha="50"
            android:backgroundTint="@color/red_orange_150"
            android:drawableRight="@drawable/ic_play"
            android:gravity="center"
            android:text="@string/standard_game" />

        <Button
            android:id="@+id/customGameBtn"
            style="@android:style/Widget.DeviceDefault.Button.Toggle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/orange_150"
            android:drawableRight="@drawable/ic_custom"
            android:gravity="center"
            android:text="@string/custom_game" />

        <Button
            android:id="@+id/optionsBtn"
            style="@android:style/Widget.DeviceDefault.Button.Toggle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/bright_green_150"
            android:drawableRight="@drawable/ic_options"
            android:gravity="center"
            android:text="@string/options" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
